Fixed word wrap in sidebar Off-canvas code cleaning

--- a/assets/sass/components/_blog-desc.scss
+++ b/assets/sass/components/_blog-desc.scss
@@ -10,4 +10,5 @@
   font-size: $font-size-small;
   font-family: $font-sans-serif;
   line-height: $line-height-small;
+  word-wrap: break-word;
 }
